fix overflow css issue for continued blog posts

--- a/src/main/content/_assets/css/blog.scss
+++ b/src/main/content/_assets/css/blog.scss
@@ -374,6 +374,7 @@ html {
 .continued_text {
     font-size: 16px;
     color: #F69144;
+    overflow-wrap: break-word;
 }
 
 .blog_post_date_mobile {
